Finished scss responsive site

--- a/memedona-client/public/index.html
+++ b/memedona-client/public/index.html
@@ -7,7 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Memedona: Shitposting memes since 1852 xd"
+      content="Memedona goes brrrrrrrrr memes memes memes and more memes"
+    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
